--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
   },
   "dependencies": {
     "pinia": "^2.0.21",
+    "pinia-plugin-persistedstate": "^2.3.0",
     "vue": "^3.2.38",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "@quasar/extras": "^1.15.5",
+    "quasar": "^2.10.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
-    "vite": "^3.0.9"
+    "vite": "^3.0.9",
+    "@quasar/vite-plugin": "^1.2.3",
+    "sass": "^1.32.12"
   }
 }
