--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for cms",
   "main": "app.js",
   "scripts": {
-    "devStart": "nodemon server.js"
+    "devStart": "nodemon server.js --ignore db.json"
   },
   "keywords": [
     "cms"
@@ -16,7 +16,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20"
   }
 }
