--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for cms",
   "main": "app.js",
   "scripts": {
-    "devStart": "nodemon server.js --ignore db.json"
+    "devStart": "nodemon server.js --ignore db.json --ignore templates/"
   },
   "keywords": [
     "cms"
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "jsdom": "^20.0.3",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
