--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-fileupload": "^1.4.0",
     "jsdom": "^20.0.3",
     "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.8.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "unzipper": "^0.10.11"
